--- a/resources/assets/sass/components/_hero.scss
+++ b/resources/assets/sass/components/_hero.scss
@@ -43,7 +43,6 @@
   margin-bottom: var(--gutter-large);
 
   h2 {
-    flex: 2;
     font-size: var(--font-size-xmedium-large);
     font-weight: var(--font-weight-normal);
     line-height: var(--font-size-xxlarge);
@@ -57,6 +56,6 @@
   }
 
   a {
-    flex: 1;
+    margin: 0 auto;
   }
 }
